CHANGES
=======

* added a version number
* Deleting OSWG template changelog, in favor of the one generated by PBR:
* updated changelog
* Moved sphinx stuff into /docs, did some setup work for tox
* Creating initial project structure
* Deleted swp file
* initial commit