@@ -52,3 +52,6 @@ docs/_build/
 
 # PyBuilder
 target/
+
+# Random noise
+*.sw[op]
