@@ -1,1 +1,3 @@
+Dan Ford <dpford@gmail.com>
 Ross Karchner <ross.karchner@cfpb.gov>
+Ross M Karchner <ross@karchner.com>
