@@ -5,6 +5,10 @@ envlist=py26,py27,py33,py34,coverage
 deps=-rtest-requirements.txt
 commands=nosetests
 
+[testenv:py26]
+deps=-rtest-requirements-py26.txt
+commands=nosetests
+
 [testenv:coverage]
 commands = 
     nosetests --with-coverage --cover-package=shortstack
