@@ -1,6 +1,10 @@
 CHANGES
 =======
 
+* Update README.md
+* Update README.md
+* renaming travis.yaml to travis.yml
+* Added coverage to our testing setup, and a config for travis-ci
 * added a version number
 * Deleting OSWG template changelog, in favor of the one generated by PBR:
 * updated changelog
